hphp/hack/test/typecheck/as_expression/tconst7.php.exp
File "tconst7.php", line 15, characters 14-30:
Invalid argument (Typing[4110])
  File "tconst7.php", line 6, characters 21-30:
  This is the expression dependent type this::TFoo
  File "tconst7.php", line 15, characters 5-9:
    resulting from expanding the type constant C::TFoo
  File "tconst7.php", line 15, characters 14-30:
  It is incompatible with a nullable type
File "tconst7.php", line 11, characters 20-29:
Invalid "as" expression hint (Typing[4195])
  File "tconst7.php", line 6, characters 21-30:
  The "as" operator cannot be used with the abstract type constant TFoo because it is not marked <<__Enforceable>>
File "tconst7.php", line 15, characters 21-30:
Invalid "as" expression hint (Typing[4195])
  File "tconst7.php", line 6, characters 21-30:
  The "as" operator cannot be used with the abstract type constant TFoo because it is not marked <<__Enforceable>>
